feat: Add dependency directories to .prettierignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,7 @@
-# Ignore artifacts:
-build
-coverage
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# CI/CD artifacts
+build/
+coverage/
