feat: Add npm prepare script for husky

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Reference configuration for Prettier and EditorConfig. It also includes stylelint and ESLint integration.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
