build: Add npm dependency for dotenv-extended

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "dotenv-extended": "^2.9.0"
   }
 }
