--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,34 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+### Secrets management
+### @see https://cheatsheetseries.owasp.org/cheatsheets/Secrets_Management_Cheat_Sheet.html
+### @see https://microsoft.github.io/code-with-engineering-playbook/source-control/secrets-management/
+### @see https://microsoft.github.io/code-with-engineering-playbook/continuous-delivery/secrets-management/
+### @see https://microsoft.github.io/code-with-engineering-playbook/continuous-delivery/azure-devops/secret-management-per-branch/
+### @see https://microsoft.github.io/code-with-engineering-playbook/continuous-integration/dev-sec-ops/secret-management/credential_scanning/
+### @see https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/removing-sensitive-data-from-a-repository
+
+## SSL certificate rules
+# SSL certificate files
+*.crt
+*.cer
+*.ca-bundle
+*.p7b
+*.p7c
+*.p7s
+*.pem
+
+# SSL keystore files
+*.key
+*.keystore
+*.jks
+
+# Combined certificate and key files
+*.p12
+*.pfx
+*.pem
+
+## Putty SSH private keys
+*.ppk
