--- a/.editorconfig
+++ b/.editorconfig
@@ -38,6 +38,11 @@ indent_style = ignore
 insert_final_newline = ignore
 indent_style = ignore
 
+# @see https://github.com/airbnb/javascript
+# @see https://airbnb.io/javascript/react
+[{*.js,*.jsx,*.ts,*.tsx,*.cjs,*.mjs}]
+indent_size = 2
+
 # PHP files MUST follow the following coding style guides:
 #   - PSR-1
 #   - PSR-2 (extends PSR-1)
