config: Add gitigore rules for GPG keys and secrets

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,11 @@ dist
 
 ## Putty SSH private keys
 *.ppk
+
+## GPG secret and private keys
+**/*private*.txt
+**/*private*.gpg
+**/*private*.secret
+**/*secret*.txt
+**/*secret*.gpg
+**/*secret*.secret
