--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   },
   "homepage": "https://github.com/ryangatchalian912/prettier-ec#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@commitlint/prompt-cli": "^17.6.6",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
+    "@commitlint/prompt-cli": "^17.6.7",
+    "dotenv-extended": "^2.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "2.8.8"
