--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dotenv-extended": "^2.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "prettier": "2.8.8"
+    "prettier": "^3.0.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
