--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@commitlint/prompt-cli": "^17.6.7",
+    "@prettier/plugin-xml": "^3.1.1",
     "dotenv-extended": "^2.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
