config: Disallow useless Stylelint comments

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,1 +1,6 @@
-{ "extends": ["stylelint-config-standard"] }
+{
+  "extends": ["stylelint-config-standard"],
+  "reportDescriptionlessDisables": true,
+  "reportInvalidScopeDisables": true,
+  "reportNeedlessDisables": true
+}
