--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "onchange": "^7.1.0",
+    "postcss-lit": "^1.1.0",
     "prettier": "^3.0.0",
     "stylelint": "^15.10.2",
     "stylelint-config-standard": "^34.0.0"
