--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "postcss-lit": "^1.1.0",
     "prettier": "^3.0.0",
     "stylelint": "^15.10.2",
-    "stylelint-config-standard": "^34.0.0"
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^10.0.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
