--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "prettier-watch": "onchange \"**/*\" --exclude-path .gitignore -- prettier --write --ignore-unknown {{changed}}",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --notify --detectOpenHandles",
     "prepare": "husky install",
     "commitmsg": "commit",
     "audit": "npm audit --registry=https://registry.npmjs.org/"
@@ -34,6 +34,7 @@
     "@prettier/plugin-xml": "^3.2.2",
     "dotenv-extended": "^2.9.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^13.3.0",
     "onchange": "^7.1.0",
     "postcss-lit": "^1.1.0",
