--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "stylelint-config-standard-scss": "^10.0.0"
   },
   "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,mjs,cjs}": [
+      "eslint --quiet --fix",
+      "prettier --write --ignore-unknown"
+    ],
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
