--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:e2e-ui": "playwright test --ui",
     "test:e2e-debug": "playwright test --debug",
     "test:e2e-report": "playwright show-report",
+    "test:e2e-report-merge": "playwright merge-reports --config=merge.config.ts ./blob-report",
     "prepare": "husky install",
     "commitmsg": "commit",
     "audit": "npm audit --registry=https://registry.npmjs.org/"
