--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "chance": "^1.1.11",
     "dotenv-extended": "^2.9.0",
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
