--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
   },
   "dependencies": {
     "dotenv-extended": "^2.9.0",
-    "node-notifier": "^10.0.1"
+    "node-notifier": "^10.0.1",
+    "nodemailer": "^6.9.8"
   },
   "engines": {
     "node": ">=18.17"
