--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "chance": "^1.1.11",
+    "csv-parse": "^5.5.3",
     "dotenv-extended": "^2.9.0",
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^13.3.0",
     "node-notifier": "^10.0.1",
+    "nodemailer": "^6.9.8",
     "onchange": "^7.1.0",
     "playwright": "^1.40.1",
     "postcss-lit": "^1.1.1",
@@ -88,6 +90,7 @@
     ]
   },
   "dependencies": {
+    "csv-parse": "^5.5.3",
     "dotenv-extended": "^2.9.0",
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.9.8"
