--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   "dependencies": {
     "csv-parse": "^5.5.3",
     "dotenv-extended": "^2.9.0",
+    "fast-xml-parser": "^4.3.3",
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.9.8"
   },
