--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prettier-watch": "onchange \"**/*\" --exclude-path .gitignore -- prettier --write --ignore-unknown {{changed}}",
     "test": "jest --coverage --notify --detectOpenHandles",
+    "test:playwright-install": "npx playwright install",
     "test:e2e": "playwright test",
     "test:e2e-ui": "playwright test --ui",
     "test:e2e-debug": "playwright test --debug",
