--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "browser-sync": "^3.0.2",
     "chance": "^1.1.11",
     "csv-parse": "^5.5.5",
     "dotenv-extended": "^2.9.0",
