config: Add VS Code productivity tasks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,6 @@
   },
   "[markdown]": {
     "files.trimTrailingWhitespace": false
-  }
+  },
+  "sarif-viewer.connectToGithubCodeScanning": "off"
 }
