--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           sudo apt install -y sudo
           sudo apt install -y git curl
           curl -fsSL https://deb.nodesource.com/setup_21.x | sudo -E bash -
-          apt-get install -y nodejs
+          sudo apt-get install -y nodejs
       - name: Print versions
         run: |
           git --version
