--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,11 @@ jobs:
           fetch-depth: 0
       - name: Install required dependencies
         run: |
-          sudo apt update
-          sudo apt install -y sudo
+          apt update
+          apt install -y sudo
           sudo apt install -y git curl
           curl -fsSL https://deb.nodesource.com/setup_21.x | sudo -E bash -
-          sudo apt-get install -y nodejs
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y nodejs
       - name: Print versions
         run: |
           git --version
@@ -28,7 +28,7 @@ jobs:
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
-        run: npx commitlint --from HEAD~1 --to HEAD --verbose
+        run: npx commitlint --last --verbose
 
       - name: Validate PR commits with commitlint
         if: github.event_name == 'pull_request'
