--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
           fetch-depth: 0
       - name: Install required dependencies
         run: |
-          apt update
           apt install -y sudo
           sudo apt install -y git curl
+          sudo apt update
           curl -fsSL https://deb.nodesource.com/setup_21.x | sudo -E bash -
           sudo DEBIAN_FRONTEND=noninteractive apt install -y nodejs
       - name: Print versions
