--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
   },
   "homepage": "https://github.com/ryangatchalian912/prettier-ec#readme",
   "devDependencies": {
-    "@commitlint/cli": "^19.2.2",
+    "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/prompt-cli": "^19.2.2",
+    "@commitlint/prompt-cli": "^19.3.0",
     "@eslint/js": "^8.55.0",
     "@playwright/test": "^1.43.1",
     "@prettier/plugin-xml": "^3.4.1",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -55,6 +56,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^13.3.0",
+    "luxon": "^3.4.4",
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.9.13",
     "onchange": "^7.1.0",
@@ -67,7 +69,8 @@
     "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard": "^34.0.0",
-    "stylelint-config-standard-scss": "^10.0.0"
+    "stylelint-config-standard-scss": "^10.0.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,cjs,mjs}": [
@@ -99,6 +102,7 @@
     "csv-parse": "^5.5.3",
     "dotenv-extended": "^2.9.0",
     "fast-xml-parser": "^4.3.3",
+    "luxon": "^3.4.4",
     "node-notifier": "^10.0.1",
     "nodemailer": "^6.9.8"
   },
