--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test:e2e-snapshot-update": "playwright test --update-snapshots",
     "prepare": "husky install",
     "commitmsg": "commit",
-    "audit": "npm audit --registry=https://registry.npmjs.org/"
+    "audit": "npm audit --registry=https://registry.npmjs.org/",
+    "autorest:help": "autorest --help",
+    "autorest:latest": "autorest --latest",
+    "autorest:reset": "autorest --reset"
   },
   "repository": {
     "type": "git",
@@ -47,6 +50,7 @@
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "autorest": "^3.7.1",
     "browser-sync": "^3.0.2",
     "chance": "^1.1.11",
     "csv-parse": "^5.5.5",
