--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Run type checks
+        run: npx tsc -p tsconfig.json --noEmit
+
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
